...
            Section {
                Button("Delete Activity") {
                    showingConfirmationAlert = true
                }.font(.headline)
                .foregroundColor(.red)
                .alert(isPresented: $showingConfirmationAlert) {
                    Alert(title: Text("Do you want to permanently delete this activity?"), primaryButton: .cancel(), secondaryButton: .destructive(Text("Delete")) {
                        do {
                            try flightLog.removeActivity(activity: originalActivity)
                            presentationMode.wrappedValue.dismiss()
                        } catch {
                            showingErrorAlert = true // this should never be reached as the original activity is retrieved from the database;
                        }
                    })
                }
                .accessibility(identifier: "deleteActivityButton")
            }
            Section {
                Button("Save Changes") {
                    let updatedActivity = FlightActivity(id: originalActivity.id, insertionDate: originalActivity.insertionDate, takeoffs: takeoffs, activityDate: activityDate, landings: landings)

                    do {
...
