...
                VStack {
                    Form {
                        ValidityView(validityDate: flightLog.recencyValidity, recencyValid: flightLog.isRecencyValid(at: now), destination: AnyView(RecencyDetail(flightLog: flightLog)))
                        Section(header: Text("Latest 3 Activities").padding(.horizontal)) {
                            if flightLog.data.isEmpty {
                                Text("Add activities to begin.")
                                    .accessibility(identifier: "addActivitiesToBeginText")
                            } else {
                                ForEach(flightLog.data.prefix(3)) { activity in
                                    ActivityDetail(flightLog: flightLog, movementCellWidth: geo.size.width/20, activity: activity)
                                }
                                .onDelete(perform: removeItems)
                            }
                        }
                        Button("Add Activity...") {
                            activeSheet = .addActivity
                        }
                        .font(.headline)
                        .accessibility(identifier: "addActivityButton")
                        /*#if DEBUG
                        // Functions used for development purposes
                        Section(header: Text("Development Only")) {
                            Button("Print Pending Notifications") {
                                NotificationsManager.printPendingNotifications()
                            }
...
