...

                    flightLog.addActivity(activity: activity)
                    presentationMode.wrappedValue.dismiss()
                }
                .disabled(landings == 0 && takeoffs == 0)
                .font(.headline)
                .accessibility(identifier: "doneButton")

                Button("Cancel") {
                    presentationMode.wrappedValue.dismiss()
                }.foregroundColor(.red)
                .accessibility(identifier: "cancelButton")
            }
...
